Few changes and added footer

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <p class="recipe-text">Your search for the best chocolate chip cookies ends here. This chewy chocolate chip cookie recipe is made with browned butter and huge chunks of chocolate for the perfect, crunchy on the outside, gooey in the middle cookie of your dreams. Pair this with a cold glass of milk for the best experience</p>
             </div>
             <img class="cookie-ready-recipe" src="images/cookies-1.jpg" alt="Ready made chocolate chip cookies">
-            <p><strong>Author:</strong><br/>Siyamtanda Tonjeni</p>
+            <p class="author-text"><strong>Author:</strong><br/>Siyamtanda Tonjeni</p>
         </div>
 
         <table  class = "recipe-table" cellspacing="5">
@@ -199,6 +199,12 @@
                 </ul>
         </div>
         <hr/>
+    </div>
+ </div>
+
+ <div class="footer-container">
+    <div class="footer-bottom">
+        <p>Copyright &copy;2024 Designed by <span class="designer">Siyamtanda Tonjeni</span></p>
     </div>
  </div>
 
