--- a/index.html
+++ b/index.html
@@ -65,10 +65,9 @@
 
 
 <!-- Details about the ingredients -->
-<div id="details">
     <div class="container">
         <div class="row">
-            <div class="column">
+            <div class="column details-content">
                 <h2>Ingredients for perfect chocolate chip cookies.</h2>
                 <p class="details-text">You’re only as good as your ingredients. These are all of the ingredients below to ensure you get a gourmet chocolate chip cookie.</p>
                 <ul>
@@ -110,10 +109,11 @@
                     </li>
                 </ul>
             </div>
-            <img class="cookie-dip-img"src="images/cookie-milk-dip.jpg" alt="Cookie milk dip">
+            <div></div>
+                <img class="cookie-dip-img" src="images/cookie-milk-dip.jpg" alt="Cookie milk dip">
+            </div>  
         </div>
     </div>
-</div>
 
 <!-- Brown butter instructions -->
 <div id="brown-butter">
